[package]
name = "rislive"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "4.0"
url = "2.5"
log = "0.4"
env_logger = "0.11"
regex = "1.9"
ipnetwork = "0.20"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
